k8s/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controller-service
  namespace: dev-ns
spec:
  selector:
    app: custom-controller
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
