k8s/controller-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controller-ingress
  namespace: <+infra.namespace>
spec:
  rules:
  - host: controller.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: controller-service
            port:
              number: 5000
